# ebb

./: .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yml  ebb.toml  package-lock.json  prepare.py  sqlx-data.json  tailwind.config.js
.github/workflows/: ci.yml  rust.yml
deliverables/milestone 1/R5/: test-sample.out  test-sample.sql
deliverables/milestone 1/R6/: test-sample.out  test-sample.sql
deliverables/milestone 1/report/: main.typ  template.typ
deliverables/milestone 2/R6/: test-production.out  test-production.sql
deliverables/milestone 2/R6/sample_data_generator/: class_schedule.sql  class_schedules.py  course_offerings.json  course_offerings.py  course_offerings.sql  course_offerings_real.sql  course_queries_1235.sql  courses.py  env.py  import_data.py  insert_queries.txt  raw_courses_1235.json  temp.py  utils.py
design/: Untitled Diagram.drawio
design/milestone 0 report/: main.typ  template.typ
env/: dev.env  prod.env  sample.env
migrations/: 20230527112515_hello.sql  20230613116515_courses.sql
models/: Cargo.toml
models/src/: course.rs  lib.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: AcademicOrganization.md  AcademicOrganizationsApi.md  AccountApi.md  Addon.md  Body.md  Changed.md  Class.md  ClassInstructor.md  ClassSchedule.md  ClassSchedulesApi.md  Closed.md  Combo.md  ComboImage.md  CommentCount.md  Course.md  CoursesApi.md  Created.md  Cuisine.md  Current.md  Data.md  En.md  En1.md  En2.md  Exam.md  ExamSchedulesApi.md  Feature.md  FieldCombos.md  FieldFranchiseLogo.md  FoodServicesApi.md  FoodServicesFranchise.md  FoodServicesFranchises.md  FoodServicesFranchisesSelf.md  FoodServicesOutlet.md  FoodServicesOutletImage.md  FoodServicesOutletPhoto.md  FoodServicesOutlets.md  FoodServicesOutletsSelf.md  FranchiseMenu.md  Geometry.md  HolidayDatesApi.md  (+43 more)
openapi/src/apis/: academic_organizations_api.rs  account_api.rs  class_schedules_api.rs  configuration.rs  courses_api.rs  exam_schedules_api.rs  food_services_api.rs  holiday_dates_api.rs  important_dates_api.rs  locations_api.rs  mod.rs  subjects_api.rs  terms_api.rs  wcms_api.rs
openapi/src/models/: academic_organization.rs  addon.rs  body.rs  changed.rs  class.rs  class_instructor.rs  class_schedule.rs  closed.rs  combo.rs  combo_image.rs  comment_count.rs  course.rs  created.rs  cuisine.rs  current.rs  data.rs  en.rs  en1.rs  en2.rs  exam.rs  feature.rs  field_combos.rs  field_franchise_logo.rs  food_services_franchise.rs  food_services_franchises.rs  food_services_franchises_self.rs  food_services_outlet.rs  food_services_outlet_image.rs  food_services_outlet_photo.rs  food_services_outlets.rs  food_services_outlets_self.rs  franchise_menu.rs  geometry.rs  hours_change.rs  important_date.rs  important_date_details.rs  individual_item.rs  individual_item_photo.rs  last_activity.rs  location.rs  (+32 more)
production/: .env  Cargo.toml
production/migrations/: 20230621162215_courses.sql  20230621162226_prerequisites.sql
production/queries/: create_courses_mv.sql  insert_course_tags.sql  insert_offerings.sql  refresh_courses_mv.sql  select_class_schedules.sql  select_course.sql  select_courses.sql  select_courses_by_tags.sql  select_courses_with_filters.sql  select_last_updated.sql  select_top_tags.sql  update_timestamp.sql
production/src/: lib.rs
production/src/synch/: course.rs  db_models.rs  generic.rs  mod.rs  offering.rs  sample_db_models.rs  schedule.rs  synchronizer.rs  term.rs  util.rs
sample/: .env  Cargo.toml  sqlx-data.json
sample/migrations/: 20230621162215_courses.sql
sample/queries/: insert_course_tags.sql  insert_courses.sql  insert_offerings.sql  insert_schedules.sql  select_class_schedules.sql  select_course.sql  select_courses.sql  select_courses_by_tags.sql  select_courses_with_filters.sql  select_courses_with_schedule.sql  select_top_tags.sql
sample/src/: lib.rs
src/: error_views.rs  global_state.rs  main.rs
src/backend/: mod.rs  open_api.rs  server.rs
src/backend/http/: course_service.rs  mod.rs
src/backend/storage/: course_mapper.rs  course_store.rs  mod.rs  mysql.rs
src/backend/storage/migrations/: hello.sql
src/backend/storage/prod_queries/: select_courses.sql
src/backend/storage/sample_queries/: select_courses.sql
src/components/: course_intro.rs  course_table.rs  filter.rs  footer.rs  layout.rs  mod.rs  schedule.rs  search_bar.rs  theme_change.rs
src/config/: mod.rs  reader.rs
src/env/: dev.env
src/models/: course.rs  mod.rs
src/server/: mod.rs
src/sql/ddl/: mv-courses.prod.sql  tbl-courses.prod.sql  tbl-courses.sample.sql  tbl-prerequisites.prod.sql  tbl-prerequisites.sample.sql
src/sql/dml/: select-course.prod.sql  select-courses.prod.sql  select-courses.sample.sql
src/storage/: course_store.rs  mod.rs  mysql.rs
src/templates/: about.rs  courses.rs  detail.rs  details.rs  index.rs  mod.rs  personal_page.rs
stores/: Cargo.toml
stores/src/: lib.rs  traits.rs
