[package]
name = "ebb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = ["hydrate"] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
perseus-tailwind = "0.4.6"
clap = { version = "4.1.7", features = ["derive"] }
thiserror = "1.0.24"
toml = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.6.18"
perseus-axum = { version = "=0.4.2" }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql"] }
tower-http = { version = "0.4.0", features = ["cors"] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
