[package]
name = "ebb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = ["hydrate"] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
perseus-tailwind = "0.4.6"
chrono = { version = "0.4.6", features = ["rkyv", "serde"] }
serde_with = "3.0.0"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.6.18"
perseus-axum = { version = "=0.4.2" }
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "offline",
    "postgres",
    "macros",
] }
tower-http = { version = "0.4.0", features = ["cors"] }
thiserror = "1.0.24"

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
reqwasm = "0.5.0"
