[workspace]
members = ["models", "stores", "sample", "production", "openapi"]
resolver = "2"

[package]
name = "ebb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = ["hydrate"] }
sycamore = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
perseus-tailwind = "0.4.6"
models = { path = "./models" }

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.6.18"
perseus-axum = { version = "=0.4.2" }
tower-http = { version = "0.4.0", features = ["cors"] }
dotenvy = "0.15.7"
openapi = { path = "./openapi" }
stores = { path = "./stores" }
production = { path = "./production" }
sample = { path = "./sample" }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
reqwasm = "0.5.0"
chrono = "0.4.23"
