[package]
name = "models"
version = "0.1.0"
edition = "2021"

[features]
sqlx = ["dep:sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "offline",
    "postgres",
    "macros",
    "json",
], optional = true }
chrono = { version = "0.4.23", features = ["serde"] }
