[package]
name = "production"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "offline",
    "postgres",
    "macros"
] }
log = "0.4.19"
simple_logger = "4.2.0"
tokio = { version = "1.29.1", features = ["full"] }
openapi = { path = "../openapi" }
stores = { path = "../stores" }
models = { path = "../models", features = ["sqlx"] }
chrono = "0.4.23"
