[package]
name = "stores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "offline",
    "postgres",
    "macros",
    "json",
] }
chrono = { version = "0.4.23", features = ["serde"] }
models = { path = "../models" }
